# aibots

./: .gitignore  README.md  config.yml  run.py
bot/: basic_bot.py  main.py
starcraft2-bot/: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt  run.py  setup.py
starcraft2-bot/bot/: __init__.py  main.py  production_manager.py  terrain_manager.py  unit_manager.py
